add_library(interfaces INTERFACE
interfaces.hpp
inoutstream/inoutstream_interface_types.hpp
inoutstream/inoutstream_interface.hpp
software_timer/software_timer_interface.hpp
)

target_link_libraries(interfaces INTERFACE commons)

target_include_directories(interfaces INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})